fixed login bug
