# src/controllers/update.ts
@@ -4,12 +4,12 @@ import userModel from "../models/user.model"
 import bcrypt from "bcrypt"
 
 interface UpdateUserRequest {
-  email?: string
   password?: string
   firstName?: string
   lastName?: string
   dob?: string
-  gender?: "male" | "female" | "other"
+  email?: string
+  gender?: "male" | "female" | "others"
 }
 
 @Route("user")
@@ -22,18 +22,23 @@ export class UpdateController extends Controller {
     @Body() body: UpdateUserRequest
   ) {
     try {
+      const emailLower = email.toLowerCase().trim()
       const updateData: any = {}
 
-      if (body.password) {
-        updateData.password = await bcrypt.hash(body.password, 10)
+      if (body.password) {updateData.password = await bcrypt.hash(body.password, 10)
+
       }
       if (body.firstName) updateData.firstName = body.firstName
       if (body.lastName) updateData.lastName = body.lastName
       if (body.dob) updateData.dob = body.dob
       if (body.gender) updateData.gender = body.gender
+      if (body.email){
+        this.setStatus(400)
+        return { message: "Email cannot be updated" }
+      }
 
-      const updatedUser = await userModel.findByIdAndUpdate(
-        {email},
+      const updatedUser = await userModel.findOneAndUpdate(
+        {email: emailLower},
         { $set: updateData },
         { new: true, select: "-password" } 
       )
@@ -43,7 +48,10 @@ export class UpdateController extends Controller {
         return { message: "User not found" }
       }
       this.setStatus(200)
-      return updatedUser
+      return {
+        message: "User updated successfully",
+        user: updatedUser
+      }
     } catch (err) {
       console.error(err)
       this.setStatus(500)
