# src/models/user.model.ts
@@ -5,7 +5,7 @@ const UserSchema = new mongoose.Schema(
   {
     firstName: { type: String, required: true },
     lastName: { type: String, required: true },
-    gender: { type: String, enum: ["male", "female", "other"], required: true },
+    gender: { type: String, enum: ["male", "female", "others"], required: true },
     dob: { type: String, required: true },
     email: {
       type: String,
