# src/swagger.json
@@ -11,24 +11,21 @@
 				"$ref": "#/components/schemas/mongoose.ObjectIdToString_Omit_mongoose.Require_id_DocType-and-TVirtuals_.__v__",
 				"description": "Converts any ObjectId properties into strings for JSON serialization"
 			},
-			"mongoose.Document_unknown.__._firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps._id-string_._timestamps-true__": {
+			"mongoose.Document_unknown.__._firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps._id-string_._timestamps-true__": {
 				"$ref": "#/components/schemas/mongoose.ObjectIdToString_Omit_mongoose.Require_id_DocType-and-TVirtuals_.__v__",
 				"description": "Generic types for Document:\n*  T - the type of _id\n*  TQueryHelpers - Object with any helpers that should be mixed into the Query type\n*  DocType - the type of the actual Document created"
 			},
-			"Pick__firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.Exclude_keyof_firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id__": {
+			"Pick__firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.Exclude_keyof_firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id__": {
 				"properties": {},
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit__firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id_": {
-				"$ref": "#/components/schemas/Pick__firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.Exclude_keyof_firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id__",
+			"Omit__firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id_": {
+				"$ref": "#/components/schemas/Pick__firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.Exclude_keyof_firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"UpdateUserRequest": {
 				"properties": {
-					"email": {
-						"type": "string"
-					},
 					"password": {
 						"type": "string"
 					},
@@ -41,12 +38,15 @@
 					"dob": {
 						"type": "string"
 					},
+					"email": {
+						"type": "string"
+					},
 					"gender": {
 						"type": "string",
 						"enum": [
 							"male",
 							"female",
-							"other"
+							"others"
 						]
 					}
 				},
@@ -82,29 +82,9 @@
 								"schema": {
 									"anyOf": [
 										{
-											"allOf": [
-												{
-													"$ref": "#/components/schemas/mongoose.Document_unknown.__._firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps._id-string_._timestamps-true__"
-												},
-												{
-													"$ref": "#/components/schemas/Omit__firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id_"
-												},
-												{
-													"properties": {
-														"id": {
-															"type": "string"
-														}
-													},
-													"required": [
-														"id"
-													],
-													"type": "object"
-												}
-											]
-										},
-										{
 											"properties": {
 												"error": {},
+												"user": {},
 												"message": {
 													"type": "string"
 												}
@@ -116,6 +96,41 @@
 										},
 										{
 											"properties": {
+												"error": {},
+												"user": {
+													"allOf": [
+														{
+															"$ref": "#/components/schemas/mongoose.Document_unknown.__._firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps._id-string_._timestamps-true__"
+														},
+														{
+															"$ref": "#/components/schemas/Omit__firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id_"
+														},
+														{
+															"properties": {
+																"id": {
+																	"type": "string"
+																}
+															},
+															"required": [
+																"id"
+															],
+															"type": "object"
+														}
+													]
+												},
+												"message": {
+													"type": "string"
+												}
+											},
+											"required": [
+												"user",
+												"message"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"user": {},
 												"error": {},
 												"message": {
 													"type": "string"
@@ -209,7 +224,7 @@
 															"enum": [
 																"male",
 																"female",
-																"other"
+																"others"
 															]
 														},
 														"lastName": {
@@ -378,7 +393,7 @@
 															"enum": [
 																"male",
 																"female",
-																"other"
+																"others"
 															]
 														},
 														"lastName": {
@@ -458,10 +473,10 @@
 									"items": {
 										"allOf": [
 											{
-												"$ref": "#/components/schemas/mongoose.Document_unknown.__._firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps._id-string_._timestamps-true__"
+												"$ref": "#/components/schemas/mongoose.Document_unknown.__._firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps._id-string_._timestamps-true__"
 											},
 											{
-												"$ref": "#/components/schemas/Omit__firstName-string--lastName-string--gender-male-or-female-or-other--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id_"
+												"$ref": "#/components/schemas/Omit__firstName-string--lastName-string--gender-male-or-female-or-others--dob-string--email-string--password-string_-and-mongoose.DefaultTimestampProps-and-__id-mongoose.Types.ObjectId_-and-___v-number_.id_"
 											},
 											{
 												"properties": {
